@@ -38,6 +38,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #8260: The read(), readline() and readlines() methods of
+  codecs.StreamReader returned incomplete data when were called after
+  readline() or read(size).  Based on patch by Amaury Forgeot d'Arc.
+
 - Issue #20374: Fix build with GNU readline >= 6.3.
 
 - Issue #14548: Make multiprocessing finalizers check pid before
